--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -1,7 +1,20 @@
 # 20151118 筆記
+* 今天筆記抽查
+
 ## 電容器
 ### 應用
 #### 照相機的閃光燈
 #### 電容式觸控螢幕
 
 ### 標示法
+（圖片）
+
+### 單位
+* $$ 1 Farad（法拉） = 1F = 1 \frac{coulumb}{voltage}$$
+* (missed)
+* $$ q = C \times \Delta V（常稱 V） $$
+    * $$ C = \frac{q}{\Delta V} $$ 
+
+
+### 特性
+
