--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -29,4 +29,5 @@
     * $$ E  = \frac{Q}{\epsilon_0 A} $$
     * $$ E = \frac{Q}{A \epsilon_0} = \lo \frac{1}{\epsilon_0}（面電荷密度） $$
 
-* 兩平行電板
+* 兩平行電板電位差？
+    * $$ V_f - V_i = \Delta V = - $$
