--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -34,3 +34,8 @@
 
 * $$ C = \frac{q}{\Delta V} = \frac{q}{Ed} = \frac{q}{\frac{q}{A\epsilon_0}d} = \frac{\epsilon_0 A}{d} $$
     * 平行板不一定要是長方形
+    * $$A$$：平行板面積
+    * $$d$$：兩板間距離
+
+### 電容器原理
+（圖片）
