--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -41,5 +41,13 @@
 （圖片）
 
 ### 電容器的並聯(parrallel conbination), 串聯(series combination)
+#### 並聯
 * 並聯的電位差皆相同
 * 電容器中所儲存的總電荷 $$ q $$ 是個別電容器中之電荷總數
+* （圖片）
+* $$ q_1 = C_1V , q_2 = C_2V, q_3 = C_3V $$
+* $$ q = q_1 + q_2 + q_3 = (C_1 + C_2 + C_3)V $$
+* $$ C_{eq} = \frac{q}{V} = C_1 + C_2 + C_3 $$
+
+#### 串聯
+在串聯的電容器兩端, 每一個電容器都有相同的電荷
