--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -50,4 +50,5 @@
 * $$ C_{eq} = \frac{q}{V} = C_1 + C_2 + C_3 $$
 
 #### 串聯
-在串聯的電容器兩端, 每一個電容器都有相同的電荷
+* 在串聯的電容器兩端, 每一個電容器都有相同的電荷 $$ q $$
+* $$ 個別電容器的電位差的總和 = 外加電位差 V $$
