--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -53,4 +53,6 @@
 * 在串聯的電容器兩端, 每一個電容器都有相同的電荷 $$ q $$
 * $$ 個別電容器的電位差的總和 = 外加電位差 V $$
 * （圖片）
-* $$ V_1 = \frac{}{} $$
+* $$ V_1 = \frac{q}{C_1}, V_2 = \frac{q}{C_2}, V_3 = \frac{q}{C_3} $$
+* $$ V = V_1 + V_2 + V_3 = q(\frac{1}{C_1} + \frac{1}{C_2} + \frac{1}{C_3}) $$
+* $$ C_eq = \frac{q}{V} = \frac{1}{\frac{1}{C_1} + \frac{1}{C_2} + \frac{1}{C_3}}$$
