--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -61,4 +61,6 @@
 ##### 範例（圖片）
 (solution missed)
 
-(2) 若電位差 = 12.0V
+(2) 若電位差 = 12.0V, $$ C_1 $$ 上的電荷？
+* $$ q_{123} = C_{123}V = 1.5 \mu F 12.0V = 18.0\mu C $$
+* $$ V_{12} = \frac{q{12}}{C_{12}} - \frac{18.0\mu C}{ $$
