--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -63,4 +63,5 @@
 
 (2) 若電位差 = 12.0V, $$ C_1 $$ 上的電荷？
 * $$ q_{123} = C_{123}V = 1.5 \mu F 12.0V = 18.0\mu C $$
-* $$ V_{12} = \frac{q{12}}{C_{12}} - \frac{18.0\mu C}{ $$
+* $$ V_{12} = \frac{q{12}}{C_{12}} - \frac{18.0\mu C}{3.0 \mu F} = 6.0V $$
+* $$ q_1 = C_1 V_1$$
