--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -68,17 +68,14 @@
 
 ### 電容器中的能量
 #### 電容器充電
-電流 $$ q^1 $$ 自一極板移到另一極板, 兩極板間的電位差 $$ V'$$ 為 $$ \frac{q'}{C} , 欲再轉移 $$ q'$$ 的額外電荷 嗷嗷嗷嗷
+電流 $$ q^1 $$ 自一極板移到另一極板, 兩極板間的電位差 $$ V'$$ 為 $$ \frac{q'}{C}$$ , 欲再轉移 $$ q'$$ 的額外電荷(misses)
 
+#### Unknown
+在填滿介電常數為 $$k$$ 之介電質中, (misses)
+一平行板電容器 $$ C = 5.0 \mu F$$, 兩極板間以電池施加電位差 $$ V = 12.0V $$ 進行充電,當充電用的電池移走, 在兩極板間插入一瓷板 $$ k = 6.50 $$
 
-
-
-
-
-
-
-
-
+(a) 試求在插入瓷板前位能為多少？  
+(b) 插入瓷板後, 位能？
 
 
 
