--- a/20151118 筆記.markdown
+++ b/20151118 筆記.markdown
@@ -77,7 +77,13 @@
 (a) 試求在插入瓷板前位能為多少？  
 (b) 插入瓷板後, 位能？
 
+$$
+U = \frac{1}{2}\frac{q^2}{C} = \frac{(CV)^2}{2C} = \frac{1}{2}CV^2 = \frac{1}{2} \cdot 5.0 \mu F(12.0V)^2 = \frac{1}{2} 5.0 \times 10^{-6}F(12.0.V)^2 = (missed)
+$$
 
+$$
+U_f = \frac{q^2}{2KC} = \frac{q^2}{2CK} = \frac{U_i}{K} = 5.54 \times 10^{-5}J
+$$
 
 
 
