Update 20151118 補強 note.markdown

--- a/20151118 補強 note.markdown
+++ b/20151118 補強 note.markdown
@@ -21,3 +21,5 @@
 (missing)
 
 ## 例題：半徑為 $$ R $$, 且帶均勻電荷的細圓環, 其總電量為 $$ Q $$, 則 $$ P $$ 點的電位為何？
+### 解決方案 - 直接代入(?)
+1. 帶入 1. , $$ U = \frac{kQ}{r} = \frac{kQ}{\sqrt{z^2 + R^2}}$$
