Update 20151118 補強 note.markdown

--- a/20151118 補強 note.markdown
+++ b/20151118 補強 note.markdown
@@ -26,3 +26,14 @@
 
 ### 解決方案 - 直接代入(?)
 1. 帶入 1. , $$ U = \frac{kQ}{r} = \frac{kQ}{\sqrt{z^2 + R^2}}$$
+
+## 習題講解
+### 未知題目
+（圖片）
+1. 將自身動能轉為電位能：
+$$
+0 + ^1/_2 m{V_0}^2 = 9V + ^1/_2 m{V末}^2
+$$
+2. $$ m = 9.11 \times 10^{-31}kg $$
+3. $$ ^1/_2 m{V_0}^2 = K $$
+4. $$ V = ^k/_{1.6 \times 10^{-19}} = 410V $$
