--- a/20151125 筆記.markdown
+++ b/20151125 筆記.markdown
@@ -1,5 +1,13 @@
 # 20151125 筆記
 ## 電容器並聯
-* $$ C_{eq} = C_1 + C_2 $$
-* $$ q = CV $$
-* $$ q_{eq} = q{1} + q{2} = C_1V + C_2V = (C_1 + C_2)V $$
+1. $$ C_{eq} = C_1 + C_2 $$
+1. $$ q = CV $$
+1. $$ q_{eq} = q_{1} + q_{2} = C_1V + C_2V = (C_1 + C_2)V $$
+2. （圖片）
+3. $$ C_{eq} = C_1 + C_2 $$
+
+## 電容器串聯
+* 並聯：parallel combination
+* 串聯：series combination
+* 從定義而言
+* （圖片）
