--- a/20151125 筆記.markdown
+++ b/20151125 筆記.markdown
@@ -15,3 +15,9 @@
 * $$ \frac{1}{C_{eq}} = \frac{1}{C_1} + \frac{1}{C_2} $$
 
 ## 平行板電容器
+* （圖片（平行板電容器標示符號））
+* $$ C = \frac{\epsilon_A}{d}$$
+* 跟電池型氧化還原反應不同, 電容器將電荷放在極板兩端
+* 不同的物質當作介電質會改變電容器電容能力（$$ \epsilon_0 常數$$）
+* （圖片）
+* $$ V_B - V_A = -\int_A^B \vec{E} \cdot d \vec{s} $$
