--- a/20151125 筆記.markdown
+++ b/20151125 筆記.markdown
@@ -20,4 +20,4 @@
 * 跟電池型氧化還原反應不同, 電容器將電荷放在極板兩端
 * 不同的物質當作介電質會改變電容器電容能力（$$ \epsilon_0 常數$$）
 * （圖片）
-* $$ V_B - V_A = -\int_A^B \vec{E} \cdot d \vec{s} $$
+* $$ V_B - V_A = -\int_A^B \vec{E} \cdot d \vec{s} = -\int(-Es) （電場跟位移方向相反） = Es $$
