--- a/20151125 筆記.markdown
+++ b/20151125 筆記.markdown
@@ -54,3 +54,6 @@ $$ U = \frac{q^2}{2C} = \frac{1}{2}CV^2 or CV ? $$
 ### 例題 - 銅導線切面面積 = $$ 3.31 \times 10^{-6} m^2$$ , 內有一電流 = $$ 10.0A $$, 求其飄移速率？假設每一個銅原子提供一個電子, 銅密度(density) = $$ 8.95 ^g/_{cm^3} $$
     * $$I ＝ nAeV_d$$
     * $$ 10.0A = 8.49 \times 10^28 個/m^3 \times $$
+
+## 歐姆定律<br />Ohm's Law
+對很多導體 $$ I 正比於 V$$ 稱為 Omic materials
