--- a/20151125_補強筆記.markdown
+++ b/20151125_補強筆記.markdown
@@ -1,4 +1,9 @@
 # 20151125 補強筆記
 
 ## 電流與歐姆定律
-1. 形成電流原因：導線中若有電位差（電壓）會驅動電荷
+1. 形成電流原因：導線中若有電位差（電壓）會驅動電荷移動, 形成電流.
+2. $$ I $$ 電流的大小：單位時間內, 通過某一截面的電量 $$ \Delta Q $$.
+    3. $$ I = \frac{\Delta Q}{\Delta t} $$
+    4. SI: $$ \frac{庫侖}{秒}(\frac{C}{S}), 稱為安培, 標記為 A$$
+    5. $$ Q = nAL ; t = \frac{L}{V_d} ; A: 截面積, n: 每單位體積的載子數, L: 長度, V_d: 飄移速度$$
+6. $$ I = \frac{nAL}{\frac{L}{Vd}} = nAVd 由 i., iii., J（電流密度） = \frac{I}{A}  = \frac{nAV_d}{A} = nV_d(\frac{A}{m^2}) $$
