--- a/20151209_note.markdown
+++ b/20151209_note.markdown
@@ -23,4 +23,5 @@
     * 三個以上導線的節點才有討論價值
     * 大膽假設節點三端的電流為 $$I_1, I_2, I_3$$
     * 有三個迴圈：左右全
-    * $$-I_11\cdot \Omega + 5V$$
+    * $$-I_11\cdot \Omega + 5V-I_12\Omega+10V = 0$$
+    * 
