--- a/20151209_note.markdown
+++ b/20151209_note.markdown
@@ -19,6 +19,7 @@
     * 這四種 case 都可用?
     * $$ \Delta V = -IR $$
     * (saved)
+
 ### 例題
 * （圖片saved）
     * 三個以上導線的節點才有討論價值
@@ -29,4 +30,12 @@
     * $$ I_3 = 2.5 A $$
     * $$ I_1 = 5A $$
     * $$ I_2 = 7.5A $$
-    * 必考題
+    * 此類型題目為必考題
+
+### 例題
+* 圖片saved
+
+#### 解決方案 - Kirchoff's 電壓定律
+1. 大膽假設電流
+2. 指定一個節點來觀察??
+3. $$ 10V $$
