--- a/20151209_note.markdown
+++ b/20151209_note.markdown
@@ -38,5 +38,6 @@
 #### 解決方案 - Kirchoff's 電壓定律
 1. 大膽假設電流
 2. 指定一個節點來觀察??
+3. $$ I_1 = I_2 + I_3 $$
 3. $$ 10V -6.0 \Omega I_2 + 2.0 I_3 = 0 $$
-4. $$ -14.0V + 6.0\Omega I_2 $$
+4. $$ -14.0V + 6.0\Omega I_2 -10V + 4.0 I_1 = 0 $$
