--- a/20151209_note.markdown
+++ b/20151209_note.markdown
@@ -41,3 +41,14 @@
 3. $$ I_1 = I_2 + I_3 $$
 3. $$ 10V -6.0 \Omega I_2 + 2.0 I_3 = 0 $$
 4. $$ -14.0V + 6.0\Omega I_2 -10V + 4.0 I_1 = 0 $$
+
+## RC 電路
+* 意指同時存在電容與電阻的電路
+* （圖片saved）
+* 當 S 開關關閉後受到電位差影響電流開始流動
+* 充電後電容可以類比為跟電池方向相反的另一電池
+* 電流會隨時間改變, 電容器電位差跟電池相同（$$ V_C = \epsilon $$）後（飽和）電流降低為 0
+* 於 t = 0 時關閉 S, 迴圈等式 $$ \epsilon - \frac{q}{C} - iR = 0 $$
+* $$ \frac{\epsilon}{R} - \frac{q}{RC} - i = 0 $$
+* $$ \frac{\epsilon}{R} - \frac{q}{RC} - \frac{dq}{dt} = 0 $$
+* <- $$ i = \frac{dq}{dt} $$
