--- a/20151209_note.markdown
+++ b/20151209_note.markdown
@@ -62,4 +62,4 @@
 * e = \lim_{n \to (missed)
 * $$ \frac{dq}{dt} = \frac{\epsilon C  q}{RC}$$
 * $$\int_0^Q \frac{1}{\epsilon C - q} dq = \frac{1}{RC} \int_0^t dt$$
-* $$ -ln(\epsilon C - q)(missed)
+* $$ -ln(\epsilon C - q)(missed) $$
