--- a/20151209_note.markdown
+++ b/20151209_note.markdown
@@ -52,7 +52,7 @@
 * $$ \frac{\epsilon}{R} - \frac{q}{RC} - i = 0 $$
 * $$ \frac{\epsilon}{R} - \frac{q}{RC} - \frac{dq}{dt} = 0 $$
 * <- $$ i = \frac{dq}{dt} $$
-* (missed!?))
+* (missed!?)
 * $$\frac{dq}{dt} = \frac{\epsilon C - q}{RC} $$
 * 自然對數
 * $$ \int \frac{1}{x} dx = lnx + c$$
