--- a/20151230_note.markdown
+++ b/20151230_note.markdown
@@ -4,5 +4,5 @@
 
 $$ r = a \csc \theta $$  
 $$ x = -a \cot \theta $$  
-(missed)  
+(missed)  $$ a \csc ^2 \theta d \theta $$  
 $$ d \overrightarrow{s} cross \hat{r} = \hat{i} dx cross \hat{r} = dx $$
