--- a/20151230_note.markdown
+++ b/20151230_note.markdown
@@ -1,11 +1,15 @@
 # 20151230 note
-## 尋找 $$ vector B $$ 在長直島線上, $$ I $$ 電流
+## 尋找 $$ vector B $$ 在長直導線上, $$ I $$ 電流
 (picture backuped)
 
 $$ r = a \csc \theta $$  
 $$ x = -a \cot \theta $$  
-(missed)  $$ a \csc ^2 \theta d \theta $$  
+=>  $$ a \csc ^2 \theta d \theta $$  
 $$ d \overrightarrow{s} cross \hat{r} = \hat{i} dx cross \hat{r} = dx $$
 (missed)
 
-$$ \int dB = \frac{\mu_{0}I}{4 \pi a}(\cos \theta_1 -  $$
+$$ \int dB = \frac{\mu_{0}I}{4 \pi a}(\cos \theta_1 -  $$(missed)
+
+### 長直導線的磁場線呈現以導線為中心的同心圓
+(picture)
+
