--- a/20151230_note.markdown
+++ b/20151230_note.markdown
@@ -29,4 +29,6 @@ $$ \overrightarrow{F_{在I_2}} = I_2(\overrightarrow{l} cross product \overright
 $$ \frac{F}{l} = {\mu_0}{2 \pi} \frac{I_1 I_2}{a} = \frac{4\pi \times 10^{-7}}{2 \pi} ^{T \cdot m}/_{A} \frac{1A \cdot 1A}{1m} = 2 \times 10^{-7} T \cdot d? $$
 
 ## 安培定律
-$$ \int $$
+$$ \oint \overrightarrow{B} \cdot d \overrightarrow{s} $$ 對封閉迴路對一個圓形的路徑, 以電流 $$ I $$ 為中心
+(picture)
+
