--- a/20151230_note.markdown
+++ b/20151230_note.markdown
@@ -57,7 +57,7 @@ B \cdot 2 \pi r = \frac{\mu_0(missed)}{}
 $$
 
 ### 螺絲管<br />Solenoid
-(picture)
+(picture1110)
 
 * 可以用來產生內部磁場
 * （夠長的話）外面產生的磁場互相抵消
