--- a/20151230_note.markdown
+++ b/20151230_note.markdown
@@ -82,3 +82,12 @@ $$
 
 ## 電磁感應
 ### 法拉第定律
+* 由磁場產生電場
+    * RFID 卡
+* 不用電池使用磁鐵也能產生電流
+
+(磁鐵對線圈圖)
+
+* 當磁鐵移動時線圈產生電流, 這叫做感應電動勢
+* $$ \epsilon = - \frac{d ?}{dt} \\
+\frac{T \cdot m^2}{s} = Volt $$
