Updates 課程筆記/20160914 上課筆記.markdown
Auto commit by GitBook Editor

--- a/課程筆記/20160914 上課筆記.markdown
+++ b/課程筆記/20160914 上課筆記.markdown
@@ -7,7 +7,7 @@
 ### 基本的物理量
 | 類別 | 單位 |
 | :---: | :---: |
-| 長度 | \( m(meter) \)|
+| 長度 |$$m(meter)$$|
 | 質量 | \( kg(kilogram) \) |
 | 時間 | \( second（秒） \) |
 | 電流 | \( A(ampere)（安培） \) |
