--- a/課程筆記/20160914 上課筆記.markdown
+++ b/課程筆記/20160914 上課筆記.markdown
@@ -23,7 +23,7 @@
 
 ### 定義方式沿革
 * 長度
-	1. \( \frac{1}{10 \times 10^6} \) 赤道到北極長度(1799)
+	1. $$\frac{1}{10 \times 10}$$ 赤道到北極長度(1799)
 	1. platimum(\(Pt_{78}\))-iridium(\(Ir_{77}\)) （金白金）合金(196?)
 	1. 光在真空中 \( \frac{1}{?} \) 秒走的距離
 * 質量（n.b. 質量(mass)與重量(weight) 的不同）
