--- a/課程筆記/20160914 上課筆記.markdown
+++ b/課程筆記/20160914 上課筆記.markdown
@@ -66,8 +66,8 @@ $$ 10^{15} $$ | peta(P)
 
 * \( 1 mile = 1.609 km \)
 * 範例
-	* 王仔的球速為 \( 95 ^{miles}/_h \)，此球速有無超過 \( 150 ^{km}/_{h} \)？
-		* \( 95 \frac{miles}{hour} = \frac{1.609 km}{1 mile} = ? \)
+	* 王仔的球速為 $$ 95 ^{miles}/_h $$，此球速有無超過 $$ 150 ^{km}/_{h} $$？
+		* $$ 95 \frac{miles}{hour} = \frac{1.609 km}{1 mile} = ? $$
 	* 若換為 \( \frac{m}{s} \) ，球速？
 		* \( ? \frac{km}{hour} \times \frac{1000m}{1km} \times \frac{1hr}{60min} \times \frac{}{} \)
 
@@ -78,8 +78,7 @@ $$ 10^{15} $$ | peta(P)
 	* \( 168（有效數字：0） + 3.45（有效數字：2） = 171（有效數字：0）\)
 
 #### 用科學符號紀錄有效數字
-* \( 1.5 \times 10^3 \) →有效數字：2
-* \( 1.5 \times 10^{-3} \) →有效數字：2
-* \( 1.50 \times 10^3 \) →有效數字：3
+* $$10^{-3} $$ →有效數字：2
+* $$ 1.50 \times 10^3 $$ →有效數字：3
 * **不是看羃次**
 * 課程中應避免使用分數，應換為科學記號標示法（可使用計算機）
