Update 作業/1051 - 20160914 - 作業 0 - 介紹你自己.markdown

--- a/作業/1051 - 20160914 - 作業 0 - 介紹你自己.markdown
+++ b/作業/1051 - 20160914 - 作業 0 - 介紹你自己.markdown
@@ -1,10 +1,11 @@
 # 1051 - 20160914 - 作業 0 - 介紹你自己
-請修改範本寫下：
+請修改[範本](105普通物理作業0範例.docx)寫下：
 
-1.你的名字
-2.你的Email
-3.你的照片
-4.你的綽號
-5.你想要老師知道有關你的事。
+1. 你的名字
+2. 你的Email
+3. 你的照片
+4. 你的綽號
+5. 你想要老師知道有關你的事
+
 
 
