--- a/作業/1051 - 20161005 - 作業 2-3.markdown
+++ b/作業/1051 - 20161005 - 作業 2-3.markdown
@@ -1,6 +1,11 @@
 # 1051 - 20161005 - 作業 2-3
 
 ## 第一項目<br>Item 1
-### 第 A 部份 - 當一個電子進入電視映像管中的一個 deflector 時以 $$3.0 \times 10^6 ^m/_s$$ 的恆定水平速度和無初始垂直速度移動著。電子在垂直方向無水平加速度下移動了 45 公分、垂直方向移動了 36 公分之後撞擊到螢幕。由 deflector 提供的恆定垂直加速度是多少？（重力帶來的影響可忽略）<br>Part A - An electron moves with a constant horizontal velocity of $$3.0 \times 10^{6} ^{m}/_{s}$$ and no initial vertical velocity as it enters a deflector inside a TV tube. The electron strikes the screen after traveling 45 cm horizontally and 36 cm vertically upward with no horizontal acceleration. What is the constant vertical acceleration provided by the deflector? (The effects of gravity can be ignored.) 
+### 第 A 部份 - 當一個電子進入電視映像管中的一個 deflector 時以 $$3.0 \times 10^{6} {^m}/_s$$ 的恆定水平速度和無初始垂直速度移動著。電子在無水平加速度下水平方向移動了 45 公分、垂直方向移動了 36 公分之後撞擊到螢幕。由 deflector 提供的恆定垂直加速度是多少？（重力帶來的影響可忽略）<br>Part A - An electron moves with a constant horizontal velocity of $$3.0 \times 10^{6} {^m}/_s$$ and no initial vertical velocity as it enters a deflector inside a TV tube. The electron strikes the screen after traveling 45 cm horizontally and 36 cm vertically upward with no horizontal acceleration. What is the constant vertical acceleration provided by the deflector? (The effects of gravity can be ignored.) 
 
-$$3.0 \times 10^{6} ^{m}/_{s}$$
+#### 單位標準化
+* $$ 水平移動距離 = 45cm = 0.45m $$
+* $$ 垂直移動距離 = 36cm = 0.36m $$
+
+#### 解決方案<br>Solution
+1. $$ 電子移動時間 = \frac{水平移動距離}{水平移動速率} = \frac{0.45m}{3.0 \times 10^{6} {^m}/_s} $$
