Update 作業/1051 - 20161005 - 作業 2-3.markdown

--- a/作業/1051 - 20161005 - 作業 2-3.markdown
+++ b/作業/1051 - 20161005 - 作業 2-3.markdown
@@ -8,4 +8,12 @@
 * $$ 垂直移動距離 = 36cm = 0.36m $$
 
 #### 解決方案<br>Solution
-1. $$ 電子移動時間 = \frac{水平移動距離}{水平移動速率} = \frac{0.45m}{3.0 \times 10^{6} {^m}/_s} $$
+1. $$ 電子移動時間 = \frac{水平移動距離}{水平移動速率} = \frac{0.45m}{3.0 \times 10^{6} {^m}/_s} = 1.5 \times 10^{-7} s $$
+1. deflector 提供的恆定垂直加速度，故根據速度 - 時間圖(?)：  
+$$ 
+電子垂直移動距離 = \frac{1}{2} \times 電子移動時間 \times 最終垂直速度
+$$
+1. $$ 最終垂直速度 = 0.36m \div (\frac{1}{2} \times (1.5 \times 10^{-7}s) ) = 4.8 \times 10^6 $$
+1. $$ \begin{align} 電子垂直加速度 = 最終垂直速度 \div 電子移動時間
+\\ = 4.8 \times 10^6 {^{m}/_s} \div 1.5 \times 10^{-7} s 
+\\ = 3.2 \times 10^{13} {^m/s^2} \end{align}$$
