--- a/課程筆記/20161005 普通物理筆記.markdown
+++ b/課程筆記/20161005 普通物理筆記.markdown
@@ -8,7 +8,7 @@
 | 10/19 | 作業四 | 第 21 章 |
 
 * 這週仍接受遲交
-* 補強時間：週二、四（請參考文件）
+* 補強時間：週二、四（請參考課程大綱）
 
 ## 有效數字
 * \( \frac{0.748（有效數字：4） \times 2.2（有效位數：2）}{3.885} = 0.42371... \)
